Fixed dark mode

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -111,7 +111,7 @@ html.discourse-no-touch .btn-default.btn-default .d-icon, html.discourse-no-touc
 }
 
 .admin-customize .themes-list-container .themes-list-item.selected {
-	color: $color-mint;
-	background-color: var(--tertiary);
+	background-color: $color-mint;
+	color: var(--secondary);
 }
 
